# wolfram_lang

./: .gitignore  Cargo.toml  README.md
.kilo/plans/: edge-tester-validator-intellisense.md  ts-lsp-from-scratch.md  wolfram-transpiler-test-cases.md
examples/: PartSpawnerShowcase.client.luau  PartSpawnerShowcase.client.wrm
src/: analyze.rs  api_db.rs  ast.rs  cli.rs  constants.rs  errors.rs  generator.rs  lexer.rs  lib.rs  luau_checker.rs  main.rs  parser.rs  roblox_api.rs  roblox_config.rs  roblox_context.rs  rojo_config.rs  scope.rs  tester.rs  tests.rs  typeck.rs  types.rs  watch.rs
src/lsp/: bindings.rs  code_actions.rs  handlers.rs  inlay_hints.rs  mod.rs  rename.rs  semantic_tokens.rs  server.rs  snippets.rs  store.rs  symbols.rs
vscode-extension/: .vscodeignore  package.json  test-diags.js  test-parser.js  test-showcase.js  tsconfig.json
vscode-extension/generator/: generate.js
vscode-extension/src/: bindings.ts  completions.ts  extension.ts  luau_datatypes.ts  server.ts  types.ts
vscode-extension/src/lsp/: ast.ts  bindings.ts  completion.ts  diagnostics.ts  hover.ts  inlayHints.ts  parser.ts  rename.ts  semanticTokens.ts  server.ts  store.ts  tester.ts  utils.ts  workspaceSymbols.ts
vscode-extension/src/syntaxes/: wolfram.tmLanguage.json
vscode-extension/templates/new-project/: .gitignore  default.project.json  wolfram.toml
vscode-extension/templates/new-project/src/client/: main.client.wol  main.client.wrm
vscode-extension/templates/new-project/src/server/: main.server.wol  main.server.wrm
(+3 files in other folders)
