[package]
name = "wolfram"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = { version = "0.16" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
lsp-server = "0.7"
lsp-types = { version = "0.95", features = ["proposed"] }
regex-lite = "0.1"
