[package]
name = "wolfram"
version = "0.1.0"
edition = "2021"

[features]
default = []
luau-check = ["dep:luau-analyze"]

[dependencies]
logos = { version = "0.16" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
regex-lite = "0.1"
luau-analyze = { version = "0.0.1", optional = true }
